# damm

./: .gitignore  Mu.npy  Priors.npy  README.md  Sigma.npy  array.npy  bar.py  box_and_whisker  damm.py  damm_class.py  lasa.py  lasa_test.py  loglikPlot.py  main  main.py  openmp  requirements.txt  spectral  test  test.py
data/: ab.csv  ab_output.csv  human_demonstrated_trajectories.csv  input.csv  logLik2_1core_3.15.csv  logLik2_2core_2.55.csv  logLik2_4core_2.02.csv  logLik2_8core_1.98.csv  logLogLik--.csv  logLogLik.csv  logLogLik2.csv  logLogLikTrap_1core_21.3.csv  logLogLikTrap_2core_17.5.csv  logLogLikTrap_8core_11.4.csv  logLogLikTrap_8core_12.3.csv  logNum.csv  logZ.csv  output.csv  pnp_done.mat  pnp_raw.mat
include/: damm.hpp  distribution.hpp  dpmm.hpp  dpmmDir.hpp  gauss.hpp  gaussDamm.hpp  global.hpp  karcher.hpp  kmeans.hpp  niw.hpp  niwDamm.hpp  niwDir.hpp  normal.hpp  normalDir.hpp  riem.hpp  structParameter.hpp  template_tutorial.hpp
saved_param/LASA/Angle/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Bendedline/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/CShape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/DoubleBendedLine/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/GShape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/JShape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/JShape_2/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Khamesh/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/LShape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Leaf_1/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Leaf_2/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Line/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Multi_Models_1/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Multi_Models_2/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Multi_Models_3/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Multi_Models_4/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/NShape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/PShape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/RShape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Saeghe/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Sharpc/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Sine/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Snake/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Spoon/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Sshape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Trapezoid/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/WShape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Worm/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/Zshape/: Mu.npy  Priors.npy  Sigma.npy
saved_param/LASA/heee/: Mu.npy  Priors.npy  Sigma.npy
src/: CMakeLists.txt  damm.cpp  dpmm.cpp  dpmmDir.cpp  gauss.cpp  gaussDamm.cpp  main.cpp  niw.cpp  niwDamm.cpp  niwDir.cpp  normal.cpp  normalDir.cpp  openMP_tutorial.cpp  spectral.cpp  test.cpp
src/dpmm_library/: CMakeLists.txt  dpmm.cpp  niw.cpp  normal.cpp  template_tutorial.cpp
util/: animate.py  data_tools.py  load_data.py  load_plot_haihui.py  load_tools.py  modelRegression.py  plot_ellipsoid.py  plot_tools.py  process_data.py  spectral_clustering.py
